--- a/src/Companpage/Personal.css
+++ b/src/Companpage/Personal.css
@@ -7,6 +7,10 @@
 
     color: #00006A;
 }
+.showpassiconss{
+  left: 95%;
+  top: 50%;
+}
 .inputsection{
     border: 1px solid #00006A;
     font-family: 'Inter';
